--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background: url('logonegroo.png') no-repeat center center fixed;
+            background-size: 53% 53%; /* Ajusta el tamaño de la imagen de fondo */
             background-color: #f4f4f9;
             margin: 0;
             padding: 20px;
@@ -36,7 +38,7 @@
         .container {
             max-width: 600px;
             width: 100%;
-            background: white;
+            background: rgba(255, 255, 255, 0.815); /* Fondo blanco semitransparente */
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -111,7 +113,7 @@
         }
         .list-container {
             width: 100%;
-            background: white;
+            background: rgba(255, 255, 255, 0.815); /* Fondo blanco semitransparente */
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
