--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             font-family: Arial, sans-serif;
             background: url('logonegroo.png') no-repeat center center fixed;
             background-size: 53% 53%; /* Ajusta el tamaño de la imagen de fondo */
+            background-attachment: fixed; /* Fija la imagen de fondo para que no se desplace */
             background-color: #f4f4f9;
             margin: 0;
             padding: 20px;
