--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('logonegroo.jpg') no-repeat center center fixed;
-            background-size:contain; /* Ajusta el tamaño de la imagen de fondo */
+            background: url('fondo.png') no-repeat center center fixed;
+            background-size: 100% 100%, contain; /* Ajusta el tamaño de la imagen de fondo */
             background-attachment: fixed; /* Fija la imagen de fondo para que no se desplace */
             background-color: #f7f7f7;
             margin: 0;
