--- a/index.html
+++ b/index.html
@@ -398,11 +398,9 @@
                 const esRazonSocial = restr && (restr.No_Aplica_Por || "").toLowerCase().includes("razón social");
 
                 // Si es Razón Social, en tipoCluster debe verse SOLO "Razón Social"
-                if (esRazonSocial) {
-                    $('#tipoCluster').val('Razón Social');
-                } else {
-                    $('#tipoCluster').val(clienteData['Tipo_de_Cluster']);
-                }
+                // Tipo de Cluster: SIEMPRE mostrar el cluster real
+                $('#tipoCluster').val(clienteData['Tipo_de_Cluster']);
+
 
                 // Resaltado: mantener/optimizar O Razón Social
                 const cluster = (clienteData['Tipo_de_Cluster'] || "").toLowerCase();
