--- a/index.html
+++ b/index.html
@@ -206,9 +206,6 @@
         <label for="tipoCluster">Tipo de Cluster:</label>
         <input type="text" id="tipoCluster" readonly>
         <br>
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" readonly>
-        <br>
         <button id="verificar" disabled>Verificar</button>
         <p id="resultado"></p>
         <p id="mensaje" class="detalle"></p> 
@@ -272,6 +269,12 @@
         let contadorPromorack = 0;
         let estadoBoton = 'Desactivar';
         let contadorCambios = 0;
+
+        // Estado para reglas de restricción/cluster
+        let clusterRawActual = '';
+        let codigoClienteActual = '';
+        let allowAgregarPromorack = false;
+        let accionOverridePromorack = null; // e.g. 'Sujeto a autorización de dirección comercial'
 
         async function loadData() {
             try {
@@ -349,12 +352,15 @@
                     $('#nombreNegocio').val('');
                     $('#nombreCliente').val('');
                     $('#tipoCluster').val('');
-                    $('#direccion').val('');
-                    $('#resultado').hide();
+$('#resultado').hide();
                     $('#agregar').prop('disabled', true);
                     $('#verificar').prop('disabled', true);
                     $('#mensaje').hide();
                     resetInputStyles();
+                    allowAgregarPromorack = false;
+                    accionOverridePromorack = null;
+                    clusterRawActual = '';
+                    codigoClienteActual = '';
                     return;
                 }
 
@@ -381,26 +387,28 @@
                     $('#nombreNegocio').addClass('highlight-background');
                     $('#nombreCliente').addClass('highlight-background');
                     $('#tipoCluster').addClass('highlight-background');
-                    $('#direccion').addClass('highlight-background');
-                    return;
+return;
                 }
 
                 const clienteData = combina[0];
+
+                // Guardar estado actual para validación/agregado
+                clusterRawActual = (clienteData['Tipo_de_Cluster'] || '');
+                codigoClienteActual = selectedClienteTruncado;
+                allowAgregarPromorack = false;
+                accionOverridePromorack = null;
 
                 // Cargar campos base
                 $('#ruta').val(clienteData['Ruta']);
                 $('#nombreNegocio').val(clienteData['Nombre_de_Cliente']);
                 $('#nombreCliente').val(clienteData['Nombre_de_Negocio']);
-                $('#direccion').val(clienteData['Direccion']);
-
-                // Detectar si tiene restricción "Razón Social"
+// Detectar si tiene restricción "Razón Social"
                 const restr = restricciones.find(r => r.Codigo === selectedClienteTruncado);
                 const esRazonSocial = restr && (restr.No_Aplica_Por || "").toLowerCase().includes("razón social");
 
                 // Si es Razón Social, en tipoCluster debe verse SOLO "Razón Social"
                 // Tipo de Cluster: SIEMPRE mostrar el cluster real
                 $('#tipoCluster').val(clienteData['Tipo_de_Cluster']);
-
 
                 // Resaltado: mantener/optimizar O Razón Social
                 const cluster = (clienteData['Tipo_de_Cluster'] || "").toLowerCase();
@@ -415,8 +423,7 @@
                 if (esRazonSocial) {
                     $('#nombreNegocio').addClass('highlight-background');
                     $('#nombreCliente').addClass('highlight-background');
-                    $('#direccion').addClass('highlight-background');
-                }
+}
 
                 resultadoElement.hide();
                 agregarButton.prop('disabled', true);
@@ -435,25 +442,93 @@
                 const agregarButton = $('#agregar');
                 const mensajeElement = $('#mensaje');
 
+                // Reset estado por defecto
+                allowAgregarPromorack = false;
+                accionOverridePromorack = null;
+
+                // Cluster real del cliente (no el texto forzado en el input)
+                const cluster = (clusterRawActual || $('#tipoCluster').val() || '').toLowerCase();
+                const esMantOpt = (cluster === 'mantener' || cluster === 'optimizar');
+
                 if (restriccionesCliente) {
-                    resultadoElement.text('No Aplica: ' + restriccionesCliente.No_Aplica_Por)
-                        .removeClass('aplica').addClass('no-aplica').show();
-                    agregarButton.prop('disabled', true);
-                    mensajeElement.show();
+                    const motivo = (restriccionesCliente.No_Aplica_Por || '');
+                    const esRazonSocial = motivo.toLowerCase().includes('razón social') || motivo.toLowerCase().includes('razon social');
 
-                    // Resaltar siempre si hay restricción
-                    $('#nombreNegocio').addClass('highlight-background');
-                    $('#nombreCliente').addClass('highlight-background');
-                    $('#tipoCluster').addClass('highlight-background');
-                    $('#direccion').addClass('highlight-background');
+                    // --- NUEVAS REGLAS ---
+                    // 1) Si el motivo es Razón Social:
+                    //    - Si el cluster es Mantener/Optimizar -> SE PERMITE agregar,
+                    //      y se marca como "Sujeto a autorización de dirección comercial".
+                    //    - En otros casos -> NO se permite agregar.
+                    // 2) Para otros motivos de restricción:
+                    //    - Si el cluster es Mantener/Optimizar -> SE PERMITE agregar (excepción).
+                    //    - En otros casos -> NO se permite agregar.
 
-                    // Si la restricción incluye Razón Social, forzar el campo a "Razón Social"
-                    const esRazonSocial = (restriccionesCliente.No_Aplica_Por || "").toLowerCase().includes("razón social");
                     if (esRazonSocial) {
-                        $('#tipoCluster').val('Razón Social');
+                        if (esMantOpt) {
+                            resultadoElement
+                                .text('Aplica: Sujeto a autorización de dirección comercial')
+                                .removeClass('no-aplica').addClass('aplica').show();
+
+                            allowAgregarPromorack = true;
+                            accionOverridePromorack = 'Sujeto a autorización de dirección comercial';
+
+                            // Mantener resaltado de campos sensibles por Razón Social
+                            $('#nombreNegocio').addClass('highlight-background');
+                            $('#nombreCliente').addClass('highlight-background');
+                            $('#tipoCluster').addClass('highlight-background');
+agregarButton.prop('disabled', false);
+                            mensajeElement.hide();
+                        } else {
+                            resultadoElement
+                                .text('No Aplica: ' + motivo)
+                                .removeClass('aplica').addClass('no-aplica').show();
+
+                            allowAgregarPromorack = false;
+                            agregarButton.prop('disabled', true);
+
+                            mensajeElement.show();
+
+                            // Resaltar siempre si hay restricción
+                            $('#nombreNegocio').addClass('highlight-background');
+                            $('#nombreCliente').addClass('highlight-background');
+                            $('#tipoCluster').addClass('highlight-background');
+// Forzar el campo a "Razón Social" cuando aplique
+                            $('#tipoCluster').val('Razón Social');
+                        }
+                    } else {
+                        if (esMantOpt) {
+                            resultadoElement
+                                .text('Aplica (Excepción Mantener/Optimizar): ' + motivo)
+                                .removeClass('no-aplica').addClass('aplica').show();
+
+                            allowAgregarPromorack = true;
+                            accionOverridePromorack = null;
+
+                            // Resaltar el cluster porque es Mantener/Optimizar
+                            $('#tipoCluster').addClass('highlight-background');
+
+                            agregarButton.prop('disabled', false);
+                            mensajeElement.hide();
+                        } else {
+                            resultadoElement
+                                .text('No Aplica: ' + motivo)
+                                .removeClass('aplica').addClass('no-aplica').show();
+
+                            allowAgregarPromorack = false;
+                            agregarButton.prop('disabled', true);
+                            mensajeElement.show();
+
+                            // Resaltar siempre si hay restricción
+                            $('#nombreNegocio').addClass('highlight-background');
+                            $('#nombreCliente').addClass('highlight-background');
+                            $('#tipoCluster').addClass('highlight-background');
+}
                     }
                 } else {
                     resultadoElement.text('Aplica').removeClass('no-aplica').addClass('aplica').show();
+                    allowAgregarPromorack = true;
+                    accionOverridePromorack = null;
+
                     agregarButton.prop('disabled', false);
                     mensajeElement.hide();
 
@@ -477,8 +552,8 @@
                 const nombreNegocio = $('#nombreNegocio').val();
                 const nombreCliente = $('#nombreCliente').val();
                 const tipoClusterActual = $('#tipoCluster').val(); // puede ser "Razón Social"
-                const direccion = $('#direccion').val();
-                const codigoCliente = cliente.slice(0, 13);
+                const direccion =
+const codigoCliente = cliente.slice(0, 13);
 
                 if (esCodigoRepetido(codigoCliente)) {
                     $('#mensajeRepetido').show();
@@ -487,7 +562,8 @@
                 $('#mensajeRepetido').hide();
 
                 const resultadoElement = $('#resultado');
-                if (resultadoElement.hasClass('no-aplica')) {
+                if (!allowAgregarPromorack) {
+                    // Si no pasó verificación o no cumple reglas de excepción
                     $('#mensaje').show();
                     return;
                 }
@@ -496,8 +572,13 @@
                 const restr = restricciones.find(r => r.Codigo === codigoCliente);
                 const esRazonSocial = restr && (restr.No_Aplica_Por || "").toLowerCase().includes("razón social");
 
-                // Valor a mostrar en la columna "Acción" (la tuya realmente es el cluster/estado)
-                const valorAccion = esRazonSocial ? 'Razón Social' : (tipoClusterActual || '');
+                // Valor a mostrar en la columna "Acción" (cluster/estado)
+                // - Si se activó override (Razón Social + Mantener/Optimizar) usar texto especial
+                // - Si es Razón Social normal, mostrar "Razón Social"
+                // - Caso general: mostrar el cluster real
+                const valorAccion = accionOverridePromorack
+                    ? accionOverridePromorack
+                    : (esRazonSocial ? 'Razón Social' : (tipoClusterActual || ''));
 
                 const nuevoCliente = {
                     Centro: centro,
@@ -506,8 +587,7 @@
                     Codigo_Cliente: codigoCliente,
                     Nombre_de_Cliente: nombreNegocio,
                     Nombre_de_Negocio: nombreCliente,
-                    Tipo_de_Cluster: valorAccion,
-                    Direccion: direccion
+                    Tipo_de_Cluster: valorAccion
                 };
 
                 clientesAgregados.push(nuevoCliente);
@@ -551,11 +631,14 @@
                 $('#nombreNegocio').val('');
                 $('#nombreCliente').val('');
                 $('#tipoCluster').val('');
-                $('#direccion').val('');
-                $('#resultado').hide();
+$('#resultado').hide();
                 $('#agregar').prop('disabled', true);
                 $('#verificar').prop('disabled', true);
                 $('#mensaje').hide();
+
+                // Reset estado de agregado
+                allowAgregarPromorack = false;
+                accionOverridePromorack = null;
 
                 if (clientesAgregados.length > 0) {
                     $('#descargarExcel').prop('disabled', false);
@@ -862,8 +945,7 @@
             $('#nombreNegocio').removeClass('highlight-background').css('background-color', 'white');
             $('#nombreCliente').removeClass('highlight-background').css('background-color', 'white');
             $('#tipoCluster').removeClass('highlight-background').css('background-color', 'white');
-            $('#direccion').removeClass('highlight-background').css('background-color', 'white');
-        }
+}
 
         function resetCambiosForm() {
             $('#centroCambios').val('').trigger('change');
